fixed white text, covered text in Contact Me page

--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -11,7 +11,8 @@ p {
 
 .contact-form {
     width: 100%;
-    margin-top: 20px;
+    // margin-top: 20px;
+    margin-top: 350px;
 
     ul {
         padding: 0;
@@ -51,7 +52,7 @@ p {
         border: 0;
         height: 50px;
         font-size: 16px;
-        color: #fff;
+        color: #000;
         padding: 0 20px;
         box-sizing: border-box;
     }
@@ -61,7 +62,7 @@ p {
         border: 0;
         height: 50px;
         font-size: 16px;
-        color: #fff;
+        color: #000;
         padding: 20px;
         box-sizing: border-box;
         min-height: 150px;
